refactor(geometry): 优化几何计算节点中的集合操作方法
- 将 get(index) 替换为 getFirst() 和 getLast() 方法调用
- 使用 removeLast() 替代 remove(size() - 1) 操作
- 简化 clamp01 函数的条件判断逻辑
- 移除废弃的 PlaneAxes 兼容性包装类
- 统一边界值处理逻辑，移除冗余的条件分支
- 优化凸包算法中的边界点处理方式